tests/rustdoc-ui/custom_code_classes_in_docs-warning.stderr
error: missing class name after `.`
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^
   |
note: the lint level is defined here
  --> $DIR/custom_code_classes_in_docs-warning.rs:5:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(rustdoc::invalid_codeblock_attributes)]` implied by `#[deny(warnings)]`

error: missing class name after `class=`
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: unsupported attribute `whatever=hehe`
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: unsupported attribute `#id`
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: unexpected `}` outside attribute block (`{}`)
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: unexpected `{` inside attribute block (`{}`)
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: unclosed attribute block (`{}`): missing `}` at the end
  --> $DIR/custom_code_classes_in_docs-warning.rs:9:1
   |
LL | / /// ```{. class= whatever=hehe #id} } {{
LL | | /// main;
LL | | /// ```
   | |_______^

error: aborting due to 7 previous errors

